--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
         <title>Boolando</title>
     </head>
     <body>
-        
+        <header>
+            <div class="header">
+                <div class="col-25">
+                    <ul>
+                        <li><a href="#">Donna</a></li>
+                        <li><a href="#">Uomo</a></li>
+                        <li><a href="#">Bambini</a></li>
+                    </ul>
+                </div>
+                <div class="col-50">
+                    <img src="./img/boolean-logo.png" alt="logo boolando" class="logo">
+                </div>
+                <div class="col-25 icons">
+                    <img src="./img/profile-svgrepo-com.svg" alt="profilo" class="icon">
+                    <img src="./img/heart-svgrepo-com.svg" alt="cuore" class="icon heart">
+                    <img src="./img/handbag-fill-svgrepo-com.svg" alt="borsa" class="icon">
+                </div>
+            </div>
+        </header>
+       <!--  <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <img src="./img/1.webp" alt="" class="image">
+                    </div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>    
+                    <div class="col"></div>
+                </div>
+            </div>
+        </main> -->
+        <footer>
+            <div></div>
+            <div></div>
+        </footer>
     </body>
 </html>
