main images done

--- a/index.html
+++ b/index.html
@@ -22,27 +22,60 @@
                 </div>
                 <div class="col-25 icons">
                     <img src="./img/profile-svgrepo-com.svg" alt="profilo" class="icon">
-                    <img src="./img/heart-svgrepo-com.svg" alt="cuore" class="icon heart">
+                    <img src="./img/heart-svgrepo-com.svg" alt="cuore" class="icon">
                     <img src="./img/handbag-fill-svgrepo-com.svg" alt="borsa" class="icon">
                 </div>
             </div>
         </header>
-       <!--  <main>
+        <main>
             <div class="container">
-                <div class="row">
+                <div class="row row_1">
                     <div class="col">
                         <img src="./img/1.webp" alt="" class="image">
+                        <div class="heart">&#9829;</div>
+                        <div class="infoProdotto">
+                            <div class="sconto">-50%</div>
+                            <div class="sostenibile">Sostenibilità</div>
+                        </div>
                     </div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="col">
+                        <img src="./img/2.webp" alt="" class="image">
+                        <div class="heart">&#9829;</div>
+                        <div class="infoProdotto">
+                            <div class="sconto">-30%</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="./img/3.webp" alt="" class="image">
+                        <div class="heart">&#9829;</div>
+                        <div class="infoProdotto">
+                            <div class="sconto">-30%</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>    
-                    <div class="col"></div>
+                <div class="row row_2">
+                    <div class="col">
+                        <img src="./img/4.webp" alt="" class="image">
+                        <div class="heart">&#9829;</div>
+                        <div class="infoProdotto">
+                            <div class="sconto">-50%</div>
+                            <div class="sostenibile">Sostenibilità</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="./img/5.webp" alt="" class="image">
+                        <div class="heart">&#9829;</div>
+                    </div>
+                    <div class="col">
+                        <img src="./img/6.webp" alt="" class="image">
+                        <div class="heart">&#9829;</div>
+                        <div class="infoProdotto">
+                            <div class="sostenibile">Sostenibilità</div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </main> -->
+        </main>
         <footer>
             <div></div>
             <div></div>
