--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <title>Boolando</title>
     </head>
     <body>
+<!-- header -->
         <header>
             <div class="header">
+<!-- col  -->
                 <div class="col-25">
                     <ul>
                         <li><a href="#">Donna</a></li>
@@ -17,61 +19,101 @@
                         <li><a href="#">Bambini</a></li>
                     </ul>
                 </div>
+<!-- col  -->
                 <div class="col-50">
                     <img src="./img/boolean-logo.png" alt="logo boolando" class="logo">
                 </div>
+<!-- col  -->
                 <div class="col-25 icons">
-                    <img src="./img/profile-svgrepo-com.svg" alt="profilo" class="icon">
-                    <img src="./img/heart-svgrepo-com.svg" alt="cuore" class="icon">
-                    <img src="./img/handbag-fill-svgrepo-com.svg" alt="borsa" class="icon">
+                    <a href="#">
+                        <img src="./img/profile-svgrepo-com.svg" alt="profilo" class="icon">
+                    </a>
+                    <a href="#">
+                        <img src="./img/heart-svgrepo-com.svg" alt="cuore" class="icon">
+                    </a>
+                    <a href="#">
+                        <img src="./img/handbag-fill-svgrepo-com.svg" alt="borsa" class="icon">
+                    </a>
                 </div>
             </div>
         </header>
+<!-- main -->
         <main>
             <div class="container">
+<!-- row 1 -->
                 <div class="row row_1">
+<!-- col  -->
                     <div class="col">
                         <img src="./img/1.webp" alt="" class="image">
+                        <img src="./img/1b.webp" alt="" class="image_b">
                         <div class="heart">&#9829;</div>
                         <div class="infoProdotto">
                             <div class="sconto">-50%</div>
                             <div class="sostenibile">Sostenibilità</div>
                         </div>
+                        <div class="marca">Levi's</div>
+                        <div class="bigger_text">RELAXED FIT TEE UNISEX</div>
+                        <div class="price">14,99&#8364; <span class="notSale">29,99&#8364;</span></div>
                     </div>
+<!-- col  -->
                     <div class="col">
                         <img src="./img/2.webp" alt="" class="image">
+                        <img src="./img/2b.webp" alt="" class="image_b">
                         <div class="heart">&#9829;</div>
                         <div class="infoProdotto">
                             <div class="sconto">-30%</div>
                         </div>
+                        <div class="marca">Guess</div>
+                        <div class="bigger_text">ROSES TEE</div>
+                        <div class="price">20,99&#8364; <span class="notSale">29,99&#8364;</span></div>
                     </div>
+<!-- col  -->
                     <div class="col">
                         <img src="./img/3.webp" alt="" class="image">
+                        <img src="./img/3b.webp" alt="" class="image_b">
                         <div class="heart">&#9829;</div>
                         <div class="infoProdotto">
                             <div class="sconto">-30%</div>
                         </div>
+                        <div class="marca">Come Zucchero Filato</div>
+                        <div class="bigger_text">VOGLIA DI COLORI PASTELLO</div>
+                        <div class="price">129,99&#8364; <span class="notSale">184,99&#8364;</span></div>
                     </div>
                 </div>
+<!-- row 2 -->
                 <div class="row row_2">
                     <div class="col">
                         <img src="./img/4.webp" alt="" class="image">
+                        <img src="./img/4b.webp" alt="" class="image_b">
                         <div class="heart">&#9829;</div>
                         <div class="infoProdotto">
                             <div class="sconto">-50%</div>
                             <div class="sostenibile">Sostenibilità</div>
                         </div>
+                        <div class="marca">Levi's</div>
+                        <div class="bigger_text">TEE UNISEX</div>
+                        <div class="price">14,99&#8364; <span class="notSale">29,99&#8364;</span></div>
                     </div>
+<!-- col  -->
                     <div class="col">
                         <img src="./img/5.webp" alt="" class="image">
+                        <img src="./img/5b.webp" alt="" class="image_b">
                         <div class="heart">&#9829;</div>
+                        <div class="marca">Maya Deluxe</div>
+                        <div class="bigger_text">STRIPE BODICE</div>
+                        <div class="price">99,99&#8364;</div>
                     </div>
+<!-- col  -->
                     <div class="col">
                         <img src="./img/6.webp" alt="" class="image">
+                        <img src="./img/6b.webp" alt="" class="image_b">
                         <div class="heart">&#9829;</div>
                         <div class="infoProdotto">
                             <div class="sostenibile">Sostenibilità</div>
                         </div>
+                        <div class="marca">Esprit</div>
+                        <div class="bigger_text">MAGLIONE - BLACK</div>
+                        <div class="price">29,99&#8364;</div>
                     </div>
                 </div>
             </div>
