position infoProdotto fixed

--- a/index.html
+++ b/index.html
@@ -44,13 +44,18 @@
                 <div class="row row_1">
 <!-- col  -->
                     <div class="col">
-                        <img src="./img/1.webp" alt="" class="image">
-                        <img src="./img/1b.webp" alt="" class="image_b">
-                        <div class="heart">&#9829;</div>
-                        <div class="infoProdotto">
-                            <div class="sconto">-50%</div>
-                            <div class="sostenibile">Sostenibilità</div>
+                        <div class="image-card">
+                            <img src="./img/1.webp" alt="" class="image">
+                            <img src="./img/1b.webp" alt="" class="image_b">
+                            <div class="infoProdotto">
+                                <div class="sconto">-50%</div>
+                                <div class="sostenibile">Sostenibilità</div>
+                            </div>
                         </div>
+
+                        
+                        <div class="heart">&#9829;</div>
+                        
                         <div class="marca">Levi's</div>
                         <div class="bigger_text">RELAXED FIT TEE UNISEX</div>
                         <div class="price">14,99&#8364; <span class="notSale">29,99&#8364;</span></div>
